--- a/src/views/onboarding/onboardLayout.ejs
+++ b/src/views/onboarding/onboardLayout.ejs
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Onboarding</title>
   <link rel="stylesheet" href="/css/style.css">
   <script defer src="/scripts/onboarding.js"></script>
 </head>
+
 <body>
   <div class="onboarding-container">
     <img src="/images/top.svg" alt="Top Design" class="top-svg" />
@@ -46,8 +48,9 @@
       <span class="dot"></span>
       <span class="dot"></span>
     </div>
-    
-    <a href="/" class="skip-link">Skip</a>
+
+    <a href="/login" class="skip-link">Skip</a>
   </div>
 </body>
+
 </html>
